# normal-db

./: README.md  pyproject.toml
src/app/: __init__.py  app.py
src/app/static/: script.js  style.css
src/app/templates/: index.html
src/normaldb/: __init__.py
src/normaldb/_internal/: closure_membership_solver.py  schema_builder.py  sqlgenerator.py
